--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
   "queue_length": 3,
   "expire_random_min": 10,
-  "expire_random_max": 20
+  "expire_random_max": 20, 
+  "operators_count": 2
 }
