--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,9 @@ set(CMAKE_CXX_STANDARD 17)
 
 find_package(nlohmann_json REQUIRED)
 find_package(Boost REQUIRED)
+find_package(GTest REQUIRED)
 
 add_executable(CallCenter main.cpp
-        include/Config.h
         src/Config.cpp
         src/NoSuchFileException.cpp
         src/CallHttpController.cpp
@@ -17,11 +17,19 @@ add_executable(CallCenter main.cpp
         src/CDRWriterImpl.cpp
         src/Operator.cpp
 )
+add_executable(Tests tests/AllTests.cpp
+        src/JsonReaderImpl.cpp
+        src/NoSuchFileException.cpp
+        src/CallQueue.cpp
+        src/Config.cpp)
 
 if(Boost_FOUND)
     include_directories(${Boost_INCLUDE_DIRS})
     target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES})
+    target_link_libraries(Tests ${Boost_LIBRARIES})
 endif()
 
-target_link_libraries(${PROJECT_NAME} nlohmann_json::nlohmann_json)
+enable_testing()
 
+target_link_libraries(${PROJECT_NAME} nlohmann_json::nlohmann_json)
+target_link_libraries(Tests GTest::gtest GTest::gtest_main nlohmann_json::nlohmann_json)
