--- a/config.json
+++ b/config.json
@@ -3,5 +3,6 @@
   "expire_random_min": 10,
   "expire_random_max": 20, 
   "operators_count": 2, 
-  "next_update_time": 20
+  "next_update_time": 20,
+  "cdr_file": "../cdr.txt"
 }
